# EEnhance

./: .gitignore  README.md  langgraph.json  pyproject.toml
eenhance/: __main__.py  config.yaml  constants.py  conversation_config.yaml  langgraph.json  main.py
eenhance/blog/: blog_assistant.py  content_generator copy.py  content_generator.py  generator.py  prompt.py
eenhance/content/: content_assistant.py
eenhance/content/content_parser/: bilibili_transcriber.py  content_extractor.py  pdf_extractor.py  website_extractor.py  youtube_transcriber.py
eenhance/data/cookies/: bili_cookies.json
eenhance/data/report/: 1. 基于预期文件大小和访问模式的混合文件分配方法优化研究.md  1. 混合文件分配方法在不同存储设备特性下的性能优化研究.md
eenhance/data/transcripts/: research_report_blog.txt  transcript_131e8c00aaa04238a211aea377a25e50.txt  transcript_2e810dc32ef84bc8b8e9a58118f972be.txt  transcript_454e17081db344e2b58d76b5d8441fe9.txt  transcript_62e23cec7eb74bf4be11097375159927.txt  transcript_689683606f374eed991738c604af6839.txt  transcript_6f4291ce8fd94b0bbaabf321f07884be.txt  transcript_a57ef46e4f6b46bea33fa7128a410f58.txt  transcript_b333727249334af0adaa552f66ba4067.txt
eenhance/research/: interview_assistant.py  research_assistant copy.py  research_assistant.py  schemas.py
eenhance/topic/: topic_assistant.py
eenhance/tts/: base.py  factory.py  text_to_speech.py  tts_assistant.py
eenhance/tts/providers/: edge.py  elevenlabs.py  (+4 more)
eenhance/ui/: constants.py  utils.py
eenhance/utils/: config.py  config_conversation.py  llm.py  logger.py
tests/: test.py  test_research_assistant.py  test_topic_assistant.py
(+6 files in other folders)
