[tool.poetry]
name = "eenhance"
version = "0.1.0"
description = ""
authors = ["ptonlix <260431910@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
langgraph = "^0.2.53"
langchain-community = "^0.3.8"
pydub = "^0.25.1"
openai = "^1.56.0"
edge-tts = "^6.1.19"
nest-asyncio = "^1.6.0"
elevenlabs = "^1.13.2"
google-cloud-texttospeech = "^2.21.1"
ffmpeg = "^1.4"
langchain-core = "^0.3.21"
langsmith = "^0.1.147"
youtube-transcript-api = "^0.6.3"
pymupdf = "^1.24.14"
bilibili-api-python = "^16.3.0"
langchain-openai = "^0.2.11"
wikipedia = "^1.4.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
